--- a/images/index.css
+++ b/images/index.css
@@ -164,3 +164,46 @@ em{
 	color: #fff;
 	font-weight: 700;
 }
+
+#spinner-text{
+  float: left;
+	color: #ccc;
+}
+
+#sk-spinner-pulse{
+  width: 20px;
+  height: 20px;
+  margin: auto 10px;
+  float: left;
+  background-color: #333;
+  border-radius: 100%;
+  -webkit-animation: sk-pulseScaleOut 1s infinite ease-in-out;
+  animation: sk-pulseScaleOut 1s infinite ease-in-out;
+}
+
+@-webkit-keyframes sk-pulseScaleOut {
+  0% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  }
+
+  100% {
+    -webkit-transform: scale(1.0);
+    transform: scale(1.0);
+    opacity: 0;
+  }
+}
+
+@keyframes sk-pulseScaleOut {
+  0% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  }
+
+  100% {
+    -webkit-transform: scale(1.0);
+    transform: scale(1.0);
+    opacity: 0;
+  }
+}
+
